--- a/.github/workflows/static.yml
+++ b/.github/workflows/static.yml
@@ -24,6 +24,8 @@ jobs:
   build:
     runs-on: ubuntu-latest
     steps:
+      - uses: actions/checkout@v2
+
       - name: Converts Markdown to HTML
         uses: jaywcjlove/markdown-to-html-cli@main
         with:
